--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vite": "^2.0.5"
+    "react": "^17.0.1",
+    "vite": "^2.1.0"
   }
 }
